2010-06-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c:
	[ 3016295 ] Initialise refcount in CMPIInstance clone
	(patch by Tim Potter)
	
2010-05-27 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimslpSLP.c:
	[ 2984485 ] Possible access to freed memory in cimslpSLP.c
        (based on patch by Klaus Kämpf)

2010-05-27 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* profileProvider.c:
	[ 2994737 ] cimslp fails to get sslCertificateFilePath config value
        (patch by Klaus Kämpf)

2010-05-25  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* sfcBroker.c:
	[ 3006690 ] Remove startSLPAgent sections from sfcBroker

2010-05-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* configure.ac
	[ 3004232 ] configure.ac allows slp-standalone and checks for sfcc
	(second hunk was not applied)

	* cimslpCMPI.h, cimslpCMPI.c:
	[ 3006687 ] ProfileProvider depends on sfcc

2010-05-21 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* tests/slptest/slpTests.sh, Makefile.am, README,
          cimslp.c, cimslp.h, cimslpCMPI.c, cimslpCMPI.h 
	  cimslpSLP.c, cimslpSLP.h, cimslpUtil.c, cimslpUtil.h,
          configure.ac, control.c, profileProvider.c,
          sfcBroker.c, sfcb.cfg.pre.in
        [ 3004257 ] slp information in README is not current
        [ 3004232 ] configure.ac allows slp-standalone and checks for sfcc
        [ 3003508 ] slpTests.sh uses bash-isms
        [ 2987170 ] Handle SLP in a provider

2010-05-21 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* indCIMXMLHandler.c:
	[ 3005508 ] Warning in indCIMXMLHandler.c 

2010-05-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlParser.c:
	[ 3005424 ] Memory leak on error responses

	* Makefile.am:
	[ 3005574 ] make clean does not remove cimXmlParserProcessed.c

	* Makefile.am:
	[ 2987170 ] Handle SLP in a provider
        (missing cimslp headers in no_inst_HEADERS)
	
2010-05-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/TestProviders/tests/IndRetryTest.sh: