@@ -157,4 +157,4 @@ Till Steinbach
 ---------------------
 02/19/2010 [ 2952616 ] internalProvider is not Threadsafe
 02/19/2010 [ 2952912 ] resultSockets variable is not used threadsafe
-
+06/17/2010 [ 2950521 ] Provider operations are wrongly traced
