@@ -2604,8 +2604,8 @@ static ProvHandler pHandlers[] = {
 #else
    {NULL},                      //OPS_ActivateFilter     28
    {NULL},                      //OPS_DeactivateFilter   29
-   {NULL},                      //OPS_EnableIndications  30
-   {NULL}                       //OPS_DisableIndications 31
+   {NULL},                      //OPS_DisableIndications  30
+   {NULL}                       //OPS_EnableIndications 31
 #endif   
 };
 
@@ -2640,8 +2640,8 @@ char *opsName[] = {
    "IndicationLookup",
    "ActivateFilter",
    "DeactivateFilter",
-   "EnableIndications",
    "DisableIndications",
+   "EnableIndications",
 };
 
 static void *processProviderInvocationRequestsThread(void *prms)
